--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,12 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-expression-3.2.13.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-web-3.2.13.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-webmvc-3.2.13.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-examples-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-excelant-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-schemas-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-scratchpad-3.12-20150511.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/opencsv-3.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
